--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "flashscore-cricket-api",
+  "name": "flashscore-api",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "postinstall": "puppeteer install"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^22.0.0",
+    "puppeteer-core": "^22.0.0",
+    "@sparticuz/chromium": "^126.0.0",
     "cors": "^2.8.5"
   }
 }
